--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,3 @@
 # English strings go here for Rails i18n
 en:
-  field_just_assigned_to: just Assignee
+  field_use_as_assignee: Use as assignee field
