--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,4 @@
 # English strings go here for Rails i18n
 en:
   field_use_as_assignee: Use as assignee field
+  field_just_assigned_to: Only assigned to
