--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,3 +1,4 @@
 # French strings go here for Rails i18n
 fr:
   field_use_as_assignee: Utiliser comme champ d'assignation
+  field_just_assigned_to: Seulement assigné à
